# profile.mobile.apps.native.ug-setting-notification-efl

./: .cproject  .gitignore  .project  CMakeLists.txt  org.tizen.setting-notification-1.0.0-arm-debug.tpk  org.tizen.setting-notification-1.0.0-arm.tpk  org.tizen.setting-notification-1.0.0-arm_debug.tpk  org.tizen.setting-notification-1.0.0-i386-debug.tpk  org.tizen.setting-notification-1.0.0-i386.tpk  org.tizen.setting-notification-1.0.0-i386_debug.tpk  project_def.prop  run.sh  setting-notification.manifest.xml  tizen-manifest.xml  ug-setting-notification-efl.efl
inc/: allowed-calls.h  common-efl.h  do-not-disturb-efl.h  log.h  notification-setting-info.h  set-scedule-info.h
packaging/: org.tizen.setting-notification.spec  setting-notification.spec  ug-setting-notification-efl.manifest  ug-setting-notification-efl.spec
res/edje/: reject_calls_popup.edc  repeat_weekly_item.edc  setting_notification.edc  time_button_layout.edc
res/po/: CMakeLists.txt  ar.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  kn.po  ko_KR.po  lt.po  lv.po  mk.po  ml.po  (+22 more)
setting-notification-app-notifications/: .cproject  .project  tizen-manifest.xml
setting-notification-app-notifications/inc/: common-efl.h  notification-setting-info.h
setting-notification-app-notifications/res/po/: az.po  de.po  et.po  fi.po  he.po  hu.po  it_IT.po  ja_JP.po  kk.po  kn.po  pt_PT.po
setting-notification-app-notifications/src/: common-efl.c  main.c  pkgmgr-setting-info.c
setting-notification-do-not-disturb/: .cproject  .project  tizen-manifest.xml
setting-notification-do-not-disturb/inc/: do-not-disturb-efl.h  excepted-apps-efl.h  pkgmgr-setting-info.h
setting-notification-do-not-disturb/res/po/: ar.po  bn.po  cs.po  en.po  en_US.po  es_ES.po  gu.po  ko_KR.po  lt.po  ro.po  ru_RU.po  sr.po  zh_HK.po
setting-notification-do-not-disturb/src/: main.c
src/: CMakeLists.txt  allowed-calls.c  common-efl.c  do-not-disturb-efl.c  excepted-apps-efl.c  main.c  notification-setting-info.c  set-schedule-info.c
ug-setting-notification-app-notifications-efl/: CMakeLists.txt
ug-setting-notification-app-notifications-efl/inc/: app-notifications-efl.h
ug-setting-notification-app-notifications-efl/src/: app-notificatons-efl.c
ug-setting-notification-do-not-disturb-efl/: CMakeLists.txt
ug-setting-notification-do-not-disturb-efl/inc/: do-not-disturb-efl.h  excepted-apps-efl.h
ug-setting-notification-do-not-disturb-efl/src/: do-not-disturb-efl.c  excepted-apps-efl.c
ug-setting-notification-efl/: CMakeLists.txt  ug-setting-notification-efl.xml
ug-setting-notification-efl/inc/: common-efl.h  log.h  pkgmgr-setting-info.h
ug-setting-notification-efl/res/po/: CMakeLists.txt  el_GR.po  es_US.po  eu.po  fr.po  ga.po  gl.po  hr.po  is.po  lv.po  nl.po  pl.po  pt_BR.po  sk.po  te.po  uk.po  uz.po
ug-setting-notification-efl/src/: common-efl.c  notification-setting-info.c  pkgmgr-setting-info.c
